--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link active" href="index.html"><i class="bi bi-house"></i> Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="catalog.html"><i class="bi bi-collection"></i> Catalog</a></li>
-            <li class="nav-item"><a class="nav-link" href="cart.html"><i class="bi bi-cart3"></i> Cart</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html"><i class="bi bi-info-circle"></i> About Us</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html"><i class="bi bi-chat-right-dots"></i> Contact Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-house"></i> Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-collection"></i> Catalog</a></li>
+            <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-cart3"></i> Cart</a></li>
+            <li class="nav-item"><a class="nav-link" href="./about"><i class="bi bi-info-circle"></i> About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-chat-right-dots"></i> Contact Us</a></li>
         </ul>
       </div>
     </div>
