--- a/catalog.html
+++ b/catalog.html
@@ -23,11 +23,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="./"><i class="bi bi-house"></i> Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./catalog"><i class="bi bi-collection"></i> Catalog</a></li>
-          <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-cart3"></i> Cart</a></li>
-          <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-info-circle"></i> About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-chat-right-dots"></i> Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link active" href="./index"><i class="bi bi-house"></i> Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-collection"></i> Catalog</a></li>
+          <li class="nav-item"><a class="nav-link" href="./cart"><i class="bi bi-cart3"></i> Cart</a></li>
+          <li class="nav-item"><a class="nav-link" href="./about"><i class="bi bi-info-circle"></i> About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact"><i class="bi bi-chat-right-dots"></i> Contact Us</a></li>
         </ul>
       </div>
     </div>
