--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="VibeTees - Trendy and Comfortable T-Shirts" />
   <meta name="keywords" content="VibeTees, T-Shirts, Fashion, Trendy, Comfortable" />
+  <meta property="og:url" content="https://vibe-tees.github.io/">
+  <meta property="og:title" content="Vibe Tees">
+  <meta property="og:description" content="VibeTees - Trendy and Comfortable T-Shirts">
+  <meta property="og:image" content="https://vibe-tees.github.io/images/vibetees-logo.png/">
   <title>VibeTees - Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
