--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <meta property="og:url" content="https://vibe-tees.github.io/">
   <meta property="og:title" content="Vibe Tees">
   <meta property="og:description" content="VibeTees - Trendy and Comfortable T-Shirts">
-  <meta property="og:image" content="https://vibe-tees.github.io/images/vibetees-logo.png/">
+  <meta property="og:image" content="images/vibetees-logo.png">
   <title>VibeTees - Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="shortcut icon" href="images/vibetees-logo.png" type="image/x-icon">
   <link rel="stylesheet" href="css/index.css" />
@@ -18,21 +19,41 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="images/vibetees-logo.png" alt="VibeTees Logo" style="height: 40px;">
+        <img src="images/vibetees-logo.png" alt="Logo" style="height: 40px;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-house"></i> Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./catalog"><i class="bi bi-collection"></i> Catalog</a></li>
-          <li class="nav-item"><a class="nav-link" href="./cart"><i class="bi bi-cart3"></i> Cart</a></li>
-          <li class="nav-item"><a class="nav-link" href="./about"><i class="bi bi-info-circle"></i> About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact"><i class="bi bi-chat-right-dots"></i> Contact Us</a></li>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav text-center">
+          <li class="nav-item">
+            <a class="nav-link active" href="./" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Home">
+              <i class="bi bi-house"></i><span> Home</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./catalog" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Catalog">
+              <i class="bi bi-collection"></i><span> Catalog</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./cart" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Cart">
+              <i class="bi bi-cart3"></i><span> Cart</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about" data-bs-toggle="tooltip" data-bs-placement="bottom" title="About Us">
+              <i class="bi bi-info-circle"></i><span> About Us</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Contact">
+              <i class="bi bi-chat-right-dots"></i><span> Contact Us</span>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -295,6 +316,11 @@
   window.onload = function () {
     typeWriter();
   };
+
+  const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    tooltipTriggerList.forEach(tooltipTriggerEl => {
+      new bootstrap.Tooltip(tooltipTriggerEl)
+    })
   </script>
 </body>
 </html>
