--- a/catalog.html
+++ b/catalog.html
@@ -13,21 +13,41 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <a href="index.html"><img src="images/vibetees-logo.png" alt="VibeTees Logo" style="height: 40px; width: auto;"></a>
+      <a class="navbar-brand" href="index.html">
+        <img src="images/vibetees-logo.png" alt="Logo" style="height: 40px;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="./index"><i class="bi bi-house"></i> Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./"><i class="bi bi-collection"></i> Catalog</a></li>
-          <li class="nav-item"><a class="nav-link" href="./cart"><i class="bi bi-cart3"></i> Cart</a></li>
-          <li class="nav-item"><a class="nav-link" href="./about"><i class="bi bi-info-circle"></i> About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact"><i class="bi bi-chat-right-dots"></i> Contact Us</a></li>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav text-center">
+          <li class="nav-item">
+            <a class="nav-link" href="./index" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Home">
+              <i class="bi bi-house"></i><span> Home</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Catalog">
+              <i class="bi bi-collection"></i><span> Catalog</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./cart" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Cart">
+              <i class="bi bi-cart3"></i><span> Cart</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about" data-bs-toggle="tooltip" data-bs-placement="bottom" title="About Us">
+              <i class="bi bi-info-circle"></i><span> About Us</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Contact">
+              <i class="bi bi-chat-right-dots"></i><span> Contact Us</span>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -188,10 +208,15 @@
 }
       showCustomAlert(`${productName} has been added to your cart!`);
     }
-
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+  tooltipTriggerList.forEach(tooltipTriggerEl => {
+    new bootstrap.Tooltip(tooltipTriggerEl)
+  })
+</script>
   <!-- Custom Alert Modal -->
 <div class="modal fade" id="customAlert" tabindex="-1" aria-labelledby="alertTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
